# das

./: .gitignore  .pre-commit-config.yaml  README.md  das  makefile  mkdocs.yml  pyproject.toml
docs/: index.md  statistics.md
docs/drivers/: ave.md  avs.md  common.md  jck.md
docs/reference/: common.md  drivers.md  print.md
modules/: avs.py  common.py  drivers.py  functionals.py  main.py  parser.py  print.py
tests/: test_ave.py  test_avs.py  test_drop_rows.py  test_get_stats.py  test_jck.py  test_parse_ds.py  test_rebin.py
