[tool.poetry]
name = "das"
version = "1.2.1"
description = ""
authors = ["Adriano Angelone <adriano.angelone.work@gmail.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.25.2"
rich = "^13.5.2"
urllib3 = "^2.0.7"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
pylint = "^2.17.5"
pytest = "^7.4.0"
pydocstyle = "^6.3.0"

[tool.poetry.group.doc.dependencies]
mkdocs = "^1.4.2"
mkdocstrings = {extras = ["python"], version = "^0.20"}
mkdocs-material = "^9.1.19"
mkdocs-render-swagger-plugin = "^0.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
